test/de.cau.cs.kieler.klighd.test/sizeEstimationTests/failing/krenderingRef01.kgt
KNode {
	children
	KNode {
		data
		RenderingRef "//@children.0/@data.1"
		Rectangle {
			children Text text
		}
	}
}